frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: group-6-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-node
  template:
    metadata:
      labels:
        app: my-node
    spec:
      containers:
        - name: my-container-frontend
          image: nutbodyslam053/group-6-app:v1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3000
          # env:
          #   - name: SECRET_KEY
          #     valueFrom:
          #       secretKeyRef:
          #         name: my-secret-group-6
          #         key: SECRET_KEY
          #   - name: MYSQL_DNS
          #     valueFrom:
          #       secretKeyRef:
          #         name: my-secret-group-6
          #         key: MYSQL_DNS
