frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: group-6-dev
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
