frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: group-6-dev
  # annotations:
  #   nginx.ingress.kubernetes.io/backend-protocol: HTTP
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tcc-01.th1.proen.cloud
      http:
        paths:
        - path: /group-6-frontend
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 3000
